--- a/src/index.html
+++ b/src/index.html
@@ -2,28 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AXAGIEUING</title>
+  <title>Smarty</title>
+  
   <base href="/">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!-- <link rel="icon" type="image/x-icon" href="assets/images/favicon.png"> -->
+  
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+  
+  <link rel="stylesheet" href="./assets/cloudflare-font-awesome-4.7.0.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet"  href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/bootstrap-fontawesome-4.7.0.min.css">
+  
+  <!-- <link rel="stylesheet"  href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+  <link rel="stylesheet" href="./assets/Bootstrap-3.4.1.min.css">
+
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.2.1/angular-material.min.css">
   
 </head>
 <body>
   <app-root></app-root>
 </body>
-
-<script src='https://kit.fontawesome.com/a076d05399.js'></script>
+  <script src="./assets/kit-fontawesome.js"></script>
+  +   <script crossorigin="anonymous" src="https://unpkg.com/markdown-it@8.4.2/dist/markdown-it.min.js"></script>
+  <!-- <script src='https://kit.fontawesome.com/a076d05399.js'></script> -->
   <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
+  <script src="./assets/jquery-3.5.1.min.js"></script>
 
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+  <!-- Latest compiled JavaScript -->
+  <script src="./assets/Bootstrap-3.4.1.min.js"></script>
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
+
+  <!-- Bot Framework Javascript-->
+  <script src="./assets/webchat.js"></script>
+  <script src="./assets/webchat-es5.js"></script>
+
+  <!-- <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script> -->
+  <!-- <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat-es5.js"></script> -->
 </html>
 
 
