--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   <app-root></app-root>
 </body>
   <script src="./assets/kit-fontawesome.js"></script>
-  +   <script crossorigin="anonymous" src="https://unpkg.com/markdown-it@8.4.2/dist/markdown-it.min.js"></script>
+  <script crossorigin="anonymous" src="https://unpkg.com/markdown-it@8.4.2/dist/markdown-it.min.js"></script>
   <!-- <script src='https://kit.fontawesome.com/a076d05399.js'></script> -->
   <!-- jQuery library -->
   <script src="./assets/jquery-3.5.1.min.js"></script>
