--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Smarty</title>
-  
+
   <base href="/">
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0 user-scalable=0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
+
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-  
+
   <link rel="stylesheet" href="./assets/cloudflare-font-awesome-4.7.0.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="./assets/bootstrap-fontawesome-4.7.0.min.css">
@@ -225,9 +225,9 @@
         </div>
 
     </div>
-  
+
   <app-root></app-root>
-  
+
 </body>
   <script src="./assets/kit-fontawesome.js"></script>
   <script crossorigin="anonymous" src="https://unpkg.com/markdown-it@8.4.2/dist/markdown-it.min.js"></script>
